fixed a little formatting error where a menu item will be misaligned if the description was too short

--- a/src/style.css
+++ b/src/style.css
@@ -121,6 +121,8 @@ body {
 
 .menu-item-container {
   display: flex;
+  width:100%;
+  justify-content: space-between;
   font-size: var(--normal-font-size);
 }
 
